--- a/public/qr.html
+++ b/public/qr.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<h1>QR Code for www.google.com</h1>
+<!-- <h1>QR Code for www.google.com</h1> -->
 
 <canvas id="qrcode"></canvas>
 
@@ -23,7 +23,7 @@
     // Create a new QRious instance
     var qr = new QRious({
         element: document.getElementById('qrcode'),
-        value: 'https://www.google.com', // URL to encode
+        value: 'https://projectitm.onrender.com', // URL to encode
         size: 256 // Size of the QR code
     });
 </script>
