--- a/public/qr.html
+++ b/public/qr.html
@@ -15,9 +15,10 @@
 </head>
 <body>
 
-<!-- <h1>QR Code for www.google.com</h1> -->
+<!-- <h1><a></a> Code for https://projectitm.onrender.com</h1> -->
 
 <canvas id="qrcode"></canvas>
+
 
 <script>
     // Create a new QRious instance
