--- a/public/success.html
+++ b/public/success.html
@@ -1,1 +1,14 @@
-<h1>Attendance Marked Successfully!!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Attendance Status</title>
+    <link rel="stylesheet" href="style1.css"> <!-- Link to external CSS -->
+</head>
+<body>
+    <div class="message-container">
+        <h1 class="success-message">Attendance Marked Successfully!&#128512;</h1>
+    </div>
+</body>
+</html>
