--- a/public/qr.html
+++ b/public/qr.html
@@ -1,3 +1,38 @@
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>QR Code Generator</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.0/qrious.min.js"></script>
+    <style>
+        #qrcode {
+            margin: 20px auto;
+            width: 256px;
+            height: 256px;
+        }
+    </style>
+</head>
+<body>
+
+
+<canvas id="qrcode"></canvas>
+
+
+<script>
+    // Create a new QRious instance
+    var qr = new QRious({
+        element: document.getElementById('qrcode'),
+        value: 'https://projectitm.onrender.com', // URL to encode
+        size: 256 // Size of the QR code
+    });
+</script>
+
+</body>
+</html> -->
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,7 +59,7 @@
     // Create a new QRious instance
     var qr = new QRious({
         element: document.getElementById('qrcode'),
-        value: 'https://qr-attendance-bz2n.onrender.com/', // URL to encode
+        value: 'https://projectitm.onrender.com', // URL to encode
         size: 256 // Size of the QR code
     });
 </script>
