--- a/public/index.html
+++ b/public/index.html
@@ -4,29 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Submit Your Info</title>
-    <link rel="stylesheet" href="style.css"> <!-- Linking the CSS file -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <p id="locationDisplay" class="location"></p> <!-- To display the location -->
-        <button class="get-location-btn" onclick="getLoc()">Get Location</button>
-        <form id="dataForm" class="form" onsubmit="handleSubmit(event)"> <!-- Pass event to prevent default behavior -->
+        <h1>Attendance Submission</h1>
+        <p id="locationDisplay" class="location"></p>
+        <button class="get-location-btn" onclick="getLoc()">Get Current Location</button>
+        <form id="dataForm" class="form" onsubmit="handleSubmit(event)">
             <input type="text" class="input-field" placeholder="Name" id="name" required />
-            <input type="text" class="input-field" placeholder="StudentID" id="ID" required />
+            <input type="text" class="input-field" placeholder="Student ID" id="ID" required />
             <input type="email" class="input-field" placeholder="Email" id="email" required />
             <select id="className" class="dropdown" required>
-                <option value="" disabled selected placeholder="Select Subject Name" id="Select Subject Name" required>Select Subject Name</option>
-                <option value="Class A">IT 501(A) Advanced Programming Techniques</option>
-                <option value="Class B">IT 502(A) Modern Database Systems and Applications</option>
-                <option value="Class C">IT 503(A) Data Communication and Networking</option>
-                <option value="Class D">IT 504(A) IT Infrastructure Management</option>
-                <option value="Class E">IT 593(A) Machine Learning Tools and Techniques</option>
+                <option value="" disabled selected>Select Subject</option>
+                <option value="IT 501(A)">IT 501(A) Advanced Programming Techniques</option>
+                <option value="IT 502(A)">IT 502(A) Modern Database Systems and Applications</option>
+                <option value="IT 503(A)">IT 503(A) Data Communication and Networking</option>
+                <option value="IT 504(A)">IT 504(A) IT Infrastructure Management</option>
+                <option value="IT 593(A)">IT 593(A) Machine Learning Tools and Techniques</option>
             </select>
-            <input type="submit" class="submit-btn" value="Submit"/>
+            <input type="submit" class="submit-btn" value="Submit">
         </form>
         <p id="message" class="message"></p>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
+
