--- a/public/success.html
+++ b/public/success.html
@@ -1,14 +1,15 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attendance Status</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="message-container">
-        <h1 class="success-message">Attendance Marked Successfully! 🎉</h1>
+        <h1 class="success-message">Attendance Marked Successfully!&#128512;</h1>
     </div>
 </body>
 </html>
