--- a/public/qr.html
+++ b/public/qr.html
@@ -19,7 +19,7 @@
         // Create a new QR code with QRious
         const qr = new QRious({
             element: document.getElementById('qrcode'),  // canvas element
-            value: 'https://projectitm.onrender.com',  // URL to encode in the QR code
+            value: 'https://projectitm.onrender.com/qr',  // URL to encode in the QR code
             size: 256  // Set size of the QR code (256x256)
         });
     </script>
