--- a/public/qr.html
+++ b/public/qr.html
@@ -15,11 +15,10 @@
     </div>
 
     <script>
-        // Create a new QR code with QRious
         const qr = new QRious({
-            element: document.getElementById('qrcode'),  // canvas element
-            value: 'https://projectitm.onrender.com',  // URL to encode in the QR code
-            size: 256  // Set size of the QR code (256x256)
+            element: document.getElementById('qrcode'),  
+            value: 'https://projectitm.onrender.com',  
+            size: 256  
         });
     </script>
 </body>
